[new] Added living room data.

--- a/UI/plot_python/project/.settings/org.eclipse.core.resources.prefs
+++ b/UI/plot_python/project/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//com/sap/ward/monitor/main/demo.py=utf-8
+encoding//com/sap/ward/monitor/main/kalman.py=utf-8
